tests/invalid/ref_to_implicit_comma.err_exp
ref_to_implicit_comma.m:008: In `test':
ref_to_implicit_comma.m:008:   error: determinism declaration not satisfied.
ref_to_implicit_comma.m:008:   Declared [38;5;40m`det',[39;49m inferred [38;5;203m`failure'.[39;49m
ref_to_implicit_comma.m:013: [38;5;203mAttempt to define a clause for `,'/2.[39;49m [38;5;226mThis is[39;49m
ref_to_implicit_comma.m:013:   [38;5;226musually caused by inadvertently writing a period[39;49m
ref_to_implicit_comma.m:013:   [38;5;226minstead of a comma at the end of the preceding[39;49m
ref_to_implicit_comma.m:013:   [38;5;226mline.[39;49m
